@@ -323,7 +323,7 @@ src/sheap-adjust.h:
 	@echo "Resetting \`src/sheap-adjust.h'."; \
 	(echo "/*	Do not edit this file!" ; \
 	 echo "  	Automatically generated by XEmacs */" ; \
-	 echo "#define SHEAP_ADJUSTMENT 0x400000") > $@
+	 echo "#define SHEAP_ADJUSTMENT 0") > $@
 
 src: @SRC_SUBDIR_DEPS@ FRC.src
 pkg-src/tree-x: pkg-src/FRC.tree-x
