@@ -1,3 +1,7 @@
+2002-12-12  Andy Piper  <andy@xemacs.org>
+
+	* sheap.c (report_sheap_usage): fixup calculation.
+
 2002-12-03  John Paul Wallington  <jpw@shootybangbang.com>
 
 	* alloc.c (garbage_collection_messages): New variable.
